--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^0.13.5
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -37,5 +38,6 @@ flutter_native_splash:
   ios: true
 
 flutter:
-
   uses-material-design: true
+  assets:
+    - .env
