--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
   flutter_dotenv: ^5.0.2
+  google_mobile_ads: ^3.0.0
 
 dev_dependencies:
   flutter_test:
